[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-actin-density"
version = "0.1.0"
description = "Cortical actin density quantification from cryo-ET data"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "napari>=0.4.18",
    "numpy",
    "pyvista",
    "mrcfile",
    "scikit-image",
    "scipy",
    "pandas",
    "qtpy",
]

[project.entry-points."napari.manifest"]
napari-actin-density = "napari_actin_density:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_actin_density = ["napari.yaml"]
